nexus-infrastructure/k8s/00-namespace.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: nexus
  labels:
    app.kubernetes.io/managed-by: helm
